fixed alignment

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -44,6 +44,10 @@
     float: left;
 }
 
+#MUM19 {
+    float: left;
+}
+
 .tripselection {
     width: 25%;
     height: 100%;
